@@ -493,9 +493,10 @@ def Ogr(**keywords):
 
     Required keyword arguments:
       file -- path to OGR supported dataset
-      layer -- layer to use within datasource
+      layer -- name of layer to use within datasource (optional if layer_by_index is used)
 
     Optional keyword arguments:
+      layer_by_index -- choose layer by index number instead of by layer name.
       base -- path prefix (default None)
       encoding -- file encoding (default 'utf-8')
       multiple_geometries -- boolean, direct the Mapnik wkb reader to interpret as multigeometries (default False)
